pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: myapp
sepc:
  containers:
  - name: my-nginx
    image: nginx:latest
    ports:
    - containerPort: 80
