result-pod.yaml
# Pod definition for Result application
apiVersion: v1
kind: Pod
metadata:
  name: result
  labels:
    app: result
spec:
  containers:
    - name: result
      image: dockersamples/examplevotingapp_result
      ports:
        - containerPort: 80
          name: result
