vote-pod.yaml
# Pod definition for Vote application
apiVersion: v1
kind: Pod
metadata:
  name: vote
  labels:
    service: vote
spec:
  containers:
    - name: vote
      image: dockersamples/examplevotingapp_vote
      ports:
        - containerPort: 80
          name: vote
