redis-service.yaml
# Service definition to expose Redis database
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: "redis-service"
      port: 6379
      targetPort: 6379
