result-app.yaml
# Pod definition for Result application
apiVersion: v1
kind: Pod
metadata:
  name: result
  labels:
    service: result
spec:
  containers:
    - name: result
      image: dockersamples/examplevotingapp_result
      ports:
        - containerPort: 80
          name: result

---
# Service definition to expose Result application
apiVersion: v1
kind: Service
metadata:
  name: results
  labels:
    app: results
spec:
  type: NodePort
  selector:
    service: result
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31001
