result-service.yaml
# Service definition to expose Result application
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: NodePort
  selector:
    app: result
  ports:
    - name: "result-service"
      port: 8080
      targetPort: 80
      nodePort: 31001
