vote-service.yaml
# Service definition to expose Vote application
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - name: "vote-service"
      port: 8080
      targetPort: 80
      nodePort: 31000
