default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # name: default-deny-ingress
  name: default-deny-all
  labels:
    app: np-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  # egress:
  #   - to:
  #     - ipBlock:
  #         cidr: 0.0.0.0/0
