postgres-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policies
  labels:
    app: postgres-policies
spec:
  podSelector:
    matchLabels:
      service: postgres
  policyTypes:
    - Ingress
    # - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              service: worker
        - podSelector:
            matchLabels:
              service: result
      ports:
        - port: 5432
          protocol: TCP
  # egress:
  #   - to:
  #       - podSelector:
  #           matchLabels:
  #             service: worker
  #     ports:
  #       - protocol: TCP
  #         port: 80
