test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  labels:
    app: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policies
  labels:
    app: postgres-policies
spec:
  podSelector:
    matchLabels:
      service: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              service: worker
        - podSelector:
            matchLabels:
              service: result
      ports:
        - port: 5432
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policies
  labels:
    app: redis-ingress
spec:
  podSelector:
    matchLabels:
      service: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              service: vote
        - podSelector:
            matchLabels:
              service: worker
      ports:
        - protocol: TCP
          port: 6379

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result-policies
  labels:
    app: result-policies
spec:
  podSelector:
    matchLabels:
      service: result
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              service: postgres
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-policies
  labels:
    app: vote-policies
spec:
  podSelector:
    matchLabels:
      service: vote
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0 # from anywhere
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              service: redis
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-policies
  labels:
    app: worker-policies
spec:
  podSelector:
    matchLabels:
      service: worker
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              service: redis
        - podSelector:
            matchLabels:
              service: postgres
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5432
